<?xml version="1.0"?>
<package format="3">
    <name>turtle_example</name>
    <version>0.0.0</version>
    <description>The turtle_example package</description>
    <license>TODO</license>
    <maintainer email="dominic.reber@epfl.ch">Dominic Reber</maintainer>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>turtlesim</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
